# LumberDefectClassifier

./: CMakeLists.txt  ImageTextureFeatures.cpp  README.md  main.cpp
C++/include/: BayesianDefectClassifier.h  ImageTextureFeatures.h
C++/src/: BayesianDefectClassifier.cpp
Python/: ImageTextureFeatures.py
